Corrige heap do Java 32 bits no Wine